<resources>
    <string name="app_name">VibezApp1.0</string>
    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_live">Live</string>
    <string name="nav_library">Library</string>
    <string name="nav_profile">Profile</string>

    <!-- Authentication -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="dont_have_account">Don\'t have an account</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_login">Back to Login</string>

    <string name="dashboard">Dashboard</string>
    <string name="welcome">Welcome</string>
    <string name="featured_songs">Featured Songs</string>
    <string name="music_streaming">Music Streaming</string>




    <!-- Music Player -->
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="lyrics">Lyrics</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>

    <!-- Search -->
    <string name="search_hint">Search songs, artists, albums...</string>
    <string name="recent_searches">Recent searches</string>
    <string name="clear_all">Clear all</string>
    <string name="no_results_found">No results found</string>
    <string name="try_different_search">Try searching for something else</string>
    <string name="browse_all">Browse all</string>

    <!-- Genres -->
    <string name="genre_icon">🎵</string>
    <string name="hip_hop">Hip Hop</string>
    <string name="afrobeat">Afrobeat</string>
    <string name="gospel">Gospel</string>
    <string name="pop">Pop</string>
    <string name="rock">Rock</string>
    <string name="jazz">Jazz</string>
    <string name="classical">Classical</string>
    <string name="country">Country</string>
    <string name="electronic">Electronic</string>
    <string name="reggae">Reggae</string>

    <!-- Library -->
    <string name="your_library">Your Library</string>
    <string name="recently_played">Recently Played</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="my_playlists">My Playlists</string>
    <string name="downloads">Downloads</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="following_artists">Following Artists</string>
    <string name="recently_created">Recently Created</string>

    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="premium_subscription">Premium Subscription</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="storage_data">Storage &amp; Data</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="this_week">This week</string>
    <string name="favorites">Favorites</string>
    <string name="playlists">Playlists</string>

    <!-- Downloads -->
    <string name="total_downloads">Total Downloads</string>
    <string name="storage_used">Storage Used</string>
    <string name="songs">Songs</string>
    <string name="no_downloads_yet">No downloads yet</string>
    <string name="download_songs_offline">Download songs to listen offline</string>

    <!-- Favorites -->
    <string name="no_liked_songs">No liked songs yet</string>
    <string name="tap_heart_save">Tap the heart icon to save your favorites</string>
    <string name="recently_added">Recently Added</string>

    <!-- Playlists -->
    <string name="my_playlists_title">My Playlists</string>
    <string name="no_playlists_yet">No playlists yet</string>
    <string name="create_first_playlist">Create your first playlist to get started</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_description">Description (optional)</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    <!-- Artist Profile -->
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="unfollow">Unfollow</string>
    <string name="followers">followers</string>
    <string name="popular">Popular</string>
    <string name="albums">Albums</string>
    <string name="about_artist">About</string>

    <!-- Lyrics -->
    <string name="lyrics_not_available">Lyrics not available</string>
    <string name="couldnt_find_lyrics">We couldn\'t find lyrics for this song</string>
    <string name="retry">Retry</string>
    <string name="loading_lyrics">Loading lyrics...</string>

    <!-- Live -->
    <string name="live">Live</string>
    <string name="live_music">Live music</string>
    <string name="now_playing">Now Playing</string>
    <string name="live_streams">Live Streams</string>

    <!-- General -->
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="try_again">Try Again</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="view_all">View All</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="play_all">Play All</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="remove_from_playlist">Remove from Playlist</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>

    <string name="default_web_client_id">30797704494-elnrl08gq99esbormkhrej938pvqjmhk.apps.googleusercontent.com</string>


    <!-- Notifications -->
    <string name="download_complete">Download complete</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="playlist_created">Playlist created</string>
    <string name="playlist_deleted">Playlist deleted</string>

    <!-- Offline Mode -->
    <string name="offline_mode">Offline Mode</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="playing_offline">Playing offline content</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>Afrikaans</item>
        <item>Zulu</item>

    </string-array>

</resources>